--- a/web v7/index.html
+++ b/web v7/index.html
@@ -95,7 +95,7 @@
             </div>
             
             <div class="view-more">
-                <a href="gallery.html" class="btn">View Full Gallery (10+ Photos)</a>
+                <a href="gallery.html" class="btn">View Full Gallery</a>
             </div>
         </div>
     </section>
