--- a/web v7/contact.html
+++ b/web v7/contact.html
@@ -44,8 +44,8 @@
                     <h3>Contact Information</h3>
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> Mundur, Palakkad, Kerala, 678592</p>
-                        <p><i class="fas fa-phone"></i> +91 491 2832454</p>
-                        <p><i class="fas fa-envelope"></i> hssmundur@gmail.com</p>
+                        <p><i class="fas fa-phone"></i> 0491-2832347</p>
+                        <p><i class="fas fa-envelope"></i> headmasterhsm@yahoo.com</p>
                     </div>
                 </div>
                 <div class="footer-column">
