--- a/web v7/gallery.html
+++ b/web v7/gallery.html
@@ -166,9 +166,9 @@
                     <h3>Contact Information</h3>
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> HSS Mundur, Palakkad, Kerala 678592</p>
-                        <p><i class="fas fa-phone"></i> +91 4923 234567</p>
-                        <p><i class="fas fa-envelope"></i> info@hssmundur.edu.in</p>
-                        <p><i class="fas fa-clock"></i> Mon - Fri: 8:30 AM - 4:00 PM</p>
+                        <p><i class="fas fa-phone"></i> 0491-2832347</p>
+                        <p><i class="fas fa-envelope"></i> headmasterhsm@yahoo.com</p>
+                        <p><i class="fas fa-clock"></i> Mon - Fri: 9:30 AM - 4:00 PM</p>
                     </div>
                 </div>
                 
