--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
                 <div class="footer-column">
                     <h3>Location Map</h3>
                     <p>Visit us at our campus in Mundur.</p>
+                    <p><a href="https://maps.app.goo.gl/dWzTwNjJ55pUJ3uS6" target="_blank" rel="noopener noreferrer" style="color: var(--primary-color); text-decoration: underline; word-break: break-all;">https://maps.app.goo.gl/dWzTwNjJ55pUJ3uS6</a></p>
                 </div>
             </div>
         </div>
@@ -68,4 +69,5 @@
         // Copy the mobile menu script from index.html here to ensure it works on this page
     </script>
 </body>
+
 </html>
