--- a/gallery.html
+++ b/gallery.html
@@ -178,7 +178,7 @@
                         <li style="margin-bottom: 10px;"><a href="index.html" style="color: #ddd; text-decoration: none;">Home</a></li>
                         <li style="margin-bottom: 10px;"><a href="about.html" style="color: #ddd; text-decoration: none;">About Us</a></li>
                         <li style="margin-bottom: 10px;"><a href="gallery.html" style="color: #ddd; text-decoration: none;">Gallery</a></li>
-                        <li style="margin-bottom: 10px;"><a href="index.html#contact" style="color: #ddd; text-decoration: none;">Contact</a></li>
+                        <li style="margin-bottom: 10px;"><a href="contact.html" style="color: #ddd; text-decoration: none;">Contact</a></li>
                     </ul>
                 </div>
             </div>
