Refactor info message in gallery.html
Removed unnecessary paragraph tags and adjusted indentation.

--- a/gallery.html
+++ b/gallery.html
@@ -126,11 +126,10 @@
                 </div>
             </div>
             
-          <div style="text-align: center;">
+           <div style="text-align: center;">
                 <p style="font-size: 1.2rem; color: var(--primary-color); margin-bottom: 20px;">
-                    <i class="fas fa-info-circle"></i> Click on any photo to view in full size
-                </p>
-          </div>
+                    <i class="fas fa-info-circle"></i> Click on any photo to view in full size</p>
+           </div>
         </div>
     </section>
 
