--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <i class="fas fa-school"></i>
             <span>HSS Mundur Campus</span>
           </div>
-          <img src="images/school-building.jpg" alt="HSS Mundur School Building" class="about-img-main"
+          <img src="images/c1.jpg" alt="HSS Mundur School Building" class="about-img-main"
                style="position:absolute;top:0;left:0;"
                onload="this.style.position='relative';this.previousElementSibling.style.display='none';"
                onerror="this.style.display='none'">
